--- a/webapp/view/mainview.view.xml
+++ b/webapp/view/mainview.view.xml
@@ -1,41 +1,77 @@
 <mvc:View controllerName="dummenorangeMM.controller.mainview" xmlns:core="sap.ui.core" xmlns:html="http://www.w3.org/1999/xhtml"
 	xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m">
-	<VBox> 
-		<Toolbar>
-			<Button text="Users" press="handleNav">
-				<customData>
-					<core:CustomData key="target" value="UsersPage"/>
-				</customData>
-			</Button>
-			<Button text="Customer" press="handleNav">
-				<customData>
-					<core:CustomData key="target" value="CustomerPage"/>
-				</customData>
-			</Button>
-			<Button text="Planning types and activities" press="handleNav">
-				<customData>
-					<core:CustomData key="target" value="PlanningTypesAndActivitiesPage"/>
-				</customData>
-			</Button>
-			<Button text="Greenhouse bay types" press="handleNav">
-				<customData>
-					<core:CustomData key="target" value="GreenhouseBayTypesPage"/>
-				</customData>
-			</Button>
-			<Button text="Variety base plants" press="handleNav">
-				<customData>
-					<core:CustomData key="target" value="VarietyBasePlansPage"/>
-				</customData>
-			</Button>
-			<Button text="Customer variety base plans" press="handleNav">
-				<customData>
-					<core:CustomData key="target" value="CustomerVarietyBasePlansPage"/>
-				</customData>
-			</Button>
-		</Toolbar>
-		
-		<NavContainer id="navCon">
-		    
-		</NavContainer>
-	</VBox>
+	<App>
+		<pages>
+			<Page enableScrolling="false">
+				<headerContent>
+					<Toolbar>
+						<Button text="Users" press="handleNav">
+							<customData>
+								<core:CustomData key="target" value="UsersPage"/>
+							</customData>
+						</Button>
+						<Button text="Customer" press="handleNav">
+							<customData>
+								<core:CustomData key="target" value="CustomerPage"/>
+							</customData>
+						</Button>
+						<Button text="Planning types and activities" press="handleNav">
+							<customData>
+								<core:CustomData key="target" value="PlanningTypesAndActivitiesPage"/>
+							</customData>
+						</Button>
+						<Button text="Greenhouse bay types" press="handleNav">
+							<customData>
+								<core:CustomData key="target" value="GreenhouseBayTypesPage"/>
+							</customData>
+						</Button>
+						<Button text="Variety base plants" press="handleNav">
+							<customData>
+								<core:CustomData key="target" value="VarietyBasePlansPage"/>
+							</customData>
+						</Button>
+						<Button text="Customer variety base plans" press="handleNav">
+							<customData>
+								<core:CustomData key="target" value="CustomerVarietyBasePlansPage"/>
+							</customData>
+						</Button>
+					</Toolbar>
+				</headerContent>
+				<content>
+					<NavContainer id="navCon" height="100%">
+						<Page id="UsersPage" showHeader="false">
+							<content>
+								<mvc:XMLView viewName="dummenorangeMM.view.UsersPage"/>
+							</content>
+						</Page>
+						<Page id="CustomerPage" showHeader="false">
+							<content>
+								<mvc:XMLView viewName="dummenorangeMM.view.CustomerPage"/>
+							</content>
+						</Page>
+								<Page id="PlanningTypesAndActivitiesPage" showHeader="false">
+							<content>
+								<mvc:XMLView viewName="dummenorangeMM.view.PlanningTypesAndActivitiesPage"/>
+							</content>
+						</Page>
+								<Page id="GreenhouseBayTypesPage" showHeader="false">
+							<content>
+								<mvc:XMLView viewName="dummenorangeMM.view.GreenhouseBayTypesPage"/>
+							</content>
+						</Page>
+								<Page id="VarietyBasePlansPage" showHeader="false">
+							<content>
+								<mvc:XMLView viewName="dummenorangeMM.view.VarietyBasePlansPage"/>
+							</content>
+						</Page>
+								<Page id="CustomerVarietyBasePlansPage" showHeader="false">
+							<content>
+								<mvc:XMLView viewName="dummenorangeMM.view.CustomerVarietyBasePlansPage"/>
+							</content>
+						</Page>
+					</NavContainer>
+				</content>
+			</Page>
+		</pages>
+	</App>
 </mvc:View>
