--- a/webapp/view/CustomerPage.view.xml
+++ b/webapp/view/CustomerPage.view.xml
@@ -1,8 +1,6 @@
 <mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="dummenorangeMM.controller.CustomerPage"
 	xmlns:html="http://www.w3.org/1999/xhtml">
 
-			<Page title="CustomerPage">
-				<content></content>
-			</Page>
+	<Label text = "Customer"/>
 
 </mvc:View>
