--- a/webapp/view/CustomerVarietyBasePlansPage.view.xml
+++ b/webapp/view/CustomerVarietyBasePlansPage.view.xml
@@ -1,8 +1,6 @@
 <mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m"
 	controllerName="dummenorangeMM.controller.CustomerVarietyBasePlansPage" xmlns:html="http://www.w3.org/1999/xhtml">
 	
-			<Page title="CustomerVarietyBasePlansPage">
-				<content></content>
-			</Page>
+		<Label text = "CustomerVarietyBasePlansPage"/>
 
 </mvc:View>
