--- a/webapp/view/PlanningTypesAndActivitiesPage.view.xml
+++ b/webapp/view/PlanningTypesAndActivitiesPage.view.xml
@@ -1,6 +1,52 @@
-<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m"
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:t="sap.ui.table"
 	controllerName="dummenorangeMM.controller.PlanningTypesAndActivitiesPage" xmlns:html="http://www.w3.org/1999/xhtml">
 
-			<Label text = "PlanningTypesAndActivitiesPage"/>
+			<!--<Label text = "PlanningTypesAndActivitiesPage"/>-->
+	<Panel>
+	<t:Table rows="{planningModel>/Planning}" selectionMode="Single" selectionBehavior="Row">
+		<t:columns>
+			<t:Column sortProperty="planning_type"  >
+				<Label text="Planning type"/>
+				<t:template>
+					<Text text="{planningModel>planning_type}"/>
+				</t:template>
+			</t:Column>
+			<t:Column  >
+				<Label text="Language"/>
+				<t:template>
+					<Text text="{planningModel>language}"/>
+				</t:template>
+			</t:Column>
+			<t:Column >
+				<Label text="Description"/>
+				<t:template>
+					<Text text="{planningModel>description}"/>
+				</t:template>
+			</t:Column>
+			<t:Column >
+				<Label text="Number of weeks available before"/>
+				<t:template>
+					<Text text="{planningModel>weeks_before}"/>
+				</t:template>
+			</t:Column>
+			<t:Column >
+				<Label text="Number of weeks available after"/>
+				<t:template>
+					<Text text="{planningModel>weeks_after}"/>
+				</t:template>
+			</t:Column>
+			<t:Column resizable="false" width="7%">
+				<t:template>
+					<HBox justifyContent="Center">
+						<core:Icon src="sap-icon://delete" press="onDelete" size="150%"/>
+						<core:Icon src="sap-icon://edit" size="150%" press="onEdit"/>
+					</HBox>
+				</t:template>
+			</t:Column>
+		</t:columns>
+	</t:Table>
+	<Button text="Add user" press="onOpenAddUserDialog" icon="sap-icon://add"/>
+	    
+	</Panel>
 
 </mvc:View>
